--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,8 +10,8 @@
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
-
-
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js" integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8=" crossorigin="anonymous"></script>
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
@@ -37,7 +37,8 @@
                     {# <li><a href="{{ path('tasks') }}">Inicio</a></li>
                     <li><a href="{{ path('my_task') }}">my Tasks</a></li>    #}
                     <li><a href="{{ path('index') }}">my Invoices</a></li>
-                    <li><a href="{{ path('streak_creation') }}">New Invoice</a></li>     
+                    <li><a href="{{ path('streak_creation') }}">New Invoice</a></li>
+                           
                   <li class="rigth"><a href="{{ path('logout') }}">Cerrar sesion</a></li> 
                     <li class="rigth"><a href="">{{ app.user.name ~ ' ' ~ app.user.surname }}</a></li>              
                   {% else %}
